tests/neg-custom-args/captures/i24309-region-orig.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i24309-region-orig.scala:17:38 ---------------------------
17 |    val x = r1.subregion[Ref^{r1.R}]: r2 => // error, limitation
   |                                      ^
   | Found:    (r2: Region{type R^ <: 's1}^) ->{r1, r1.R} Ref^{r1.R}
   | Required: Region{type R^}^ ->{any} Ref^{r1.R}
   |
   | Note that capability `r1.R` cannot flow into capture set {any}
   | because r1.R in trait Region is not visible from any in value x.
   |
   | where:    ^   refers to the root capability caps.any
   |           any is a root capability created in value x when checking argument to parameter f of method subregion
   |
18 |      var a: Ref^{r1.R} = r1.alloc(0)
19 |...
21 |      a
   |
   | longer explanation available when compiling with `-explain`
